<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Sync">

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/neumorphCardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:neumorph_shadowColorDark="@color/gray"
        app:neumorph_shadowColorLight="@color/white"
        app:neumorph_shadowElevation="5dp"
        app:neumorph_shapeType="basin"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="8"
            android:alignmentMode="alignMargins"
            android:autofillHints="@string/search_notes"
            android:background="@null"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawablePadding="5dp"
            android:hint="@string/search_here"
            android:inputType="textNoSuggestions"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/blue_grey_800"
            android:textColorHint="@color/blue_grey_800" />
    </soup.neumorphism.NeumorphCardView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="visible"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neumorphCardView2"
        app:srcCompat="@drawable/ic_search_user" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="18sp"
        android:visibility="visible"
        android:textStyle="bold"
        android:textColor="@color/grey_600"
        android:text="@string/empty_ntap_add_to_announcement"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:fadeScrollbars="true"
        android:nestedScrollingEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neumorphCardView2"
        tools:listitem="@layout/card_user" />


</androidx.constraintlayout.widget.ConstraintLayout>