<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:clickable="true"
    android:background="@color/white"
    tools:context=".post">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp"

        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:animateLayoutChanges="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/linearLayout3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_back_view"
        android:padding="10dp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_back"
        android:backgroundTint="@color/orange_600"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_feed_home"
        android:backgroundTint="@color/post_bg"
        android:fontFamily="@font/quicksand_bold"
        android:paddingStart="25dp"
        android:paddingTop="5dp"
        android:paddingEnd="25dp"
        android:paddingBottom="5dp"
        android:text="@string/post"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3" />


    <EditText
        android:id="@+id/inputNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textMultiLine"
        android:paddingStart="8dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="8dp"
        android:theme="@style/EditTheme"
        android:textColor="@color/orange_700"
        android:textColorHint="@color/grey_300"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/drawable_bg_pdf"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/inputNote"
        app:layout_constraintStart_toStartOf="@+id/inputNote"
        app:layout_constraintTop_toBottomOf="@+id/layoutWebURL">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="100dp"
                android:layout_height="44dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/bg_feed_home"
                android:backgroundTint="@color/orange_100"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/category"
                android:fontFamily="@font/quicksand_regular"
                android:textColor="@color/blue_grey_800" />

            <EditText
                android:id="@+id/editTextTextMultiLine13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:layout_weight="1"
                android:autofillHints="@string/category"
                android:ems="10"
                android:textColorHint="@color/grey_300"
                android:textColor="@color/orange_600"
                android:gravity="center"
                android:hint="@string/art"
                android:inputType="textMultiLine"
                android:theme="@style/EditTheme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView30"
                android:layout_width="100dp"
                android:layout_height="44dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/bg_feed_home"
                android:backgroundTint="@color/orange_100"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/city"
                android:fontFamily="@font/quicksand_regular"
                android:textColor="@color/blue_grey_800" />

            <EditText
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:autofillHints="@string/city"
                android:ems="10"
                android:textColorHint="@color/grey_300"
                android:textColor="@color/orange_600"
                android:gravity="center"
                android:hint="@string/bilaspur"
                android:inputType="textMultiLine"
                android:theme="@style/EditTheme" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view13"
        android:layout_width="6dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_feed_home"
        android:backgroundTint="@color/orange_200"
        app:layout_constraintBottom_toBottomOf="@+id/body"
        app:layout_constraintEnd_toStartOf="@+id/inputNote"
        app:layout_constraintTop_toTopOf="@+id/body" />

    <EditText
        android:id="@+id/body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="top"
        android:hint="@string/describe_here"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textMultiLine"
        android:minHeight="150dp"
        android:paddingStart="8dp"
        android:paddingTop="10dp"
        android:paddingEnd="8dp"
        android:paddingBottom="10dp"
        android:textColor="@color/grey_700"
        android:textColorHint="@color/grey_300"
        android:textSize="15sp"
        android:theme="@style/EditTheme"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/voice_text" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/voice_text"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:lottie_autoPlay="true"
        app:lottie_fileName="voice.json"
        app:lottie_loop="true" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:contentDescription="@string/indicator"
        app:layout_constraintBottom_toBottomOf="@+id/voice_text"
        app:layout_constraintEnd_toStartOf="@+id/voice_text"
        app:layout_constraintTop_toTopOf="@+id/voice_text"
        app:srcCompat="@drawable/ic_add_img"
        app:tint="@color/post_bg" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/link"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:lottie_autoPlay="true"
        app:lottie_fileName="link.json"
        app:lottie_loop="true" />

    <LinearLayout
        android:id="@+id/layoutWebURL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/inputNote"
        app:layout_constraintStart_toStartOf="@+id/inputNote"
        app:layout_constraintTop_toBottomOf="@+id/inputNote">


        <TextView
            android:id="@+id/textWebURL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:autoLink="web"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorLink="@color/post_bg"
            android:textSize="15sp"
            tools:text="www.google.com" />

        <ImageView
            android:id="@+id/link_remover"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete"
            android:visibility="visible"
            app:tint="@color/red_500" />


    </LinearLayout>


    <ImageView
        android:id="@+id/imageNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/body"
        app:layout_constraintStart_toStartOf="@+id/view13"
        app:layout_constraintTop_toBottomOf="@+id/body" />

    <ImageView
        android:id="@+id/imageRemoveImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_delete"
        android:contentDescription="@string/app_name"
        android:padding="4dp"
        android:src="@drawable/ic_delete"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/imageNote"
        app:layout_constraintTop_toTopOf="@id/imageNote"
        app:tint="@color/white"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>