<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true"
    android:layout_marginTop="20dp"
    tools:context=".about_syno">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/voice_text"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginEnd="-25dp"
            android:layout_marginTop="-30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25"
            app:lottie_autoPlay="true"
            app:lottie_fileName="hello.json"
            app:lottie_loop="true" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/hello_text"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginTop="-30dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25"
            app:lottie_autoPlay="true"
            app:lottie_fileName="hello_letter.json"
            app:lottie_loop="true" />

        <ImageView
            android:id="@+id/linearLayout3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_back_view"
            android:padding="10dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_back"
            android:backgroundTint="@color/orange_600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <soup.neumorphism.NeumorphCardView
            android:id="@+id/neumorphCardView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:neumorph_lightSource="rightBottom"
            app:neumorph_shadowColorDark="@color/light_one"
            app:neumorph_shadowColorLight="@color/light_one"
            app:neumorph_shadowElevation="7dp"
            app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
            app:neumorph_shapeType="flat"
            tools:ignore="MissingConstraints">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_syno"
                tools:ignore="ImageContrastCheck" />

        </soup.neumorphism.NeumorphCardView>

        <TextView
            android:id="@+id/textView25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sync_with_smile"
            android:textSize="12sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:fontFamily="@font/quicksand_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/neumorphCardView2" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-40dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/what_is_syno"
            android:textColor="@color/orange_700"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/voice_text" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/syno_short_for_synergy"
            android:textColor="@color/grey_600"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView28" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>